# goit-pythonweb-hw-08

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
src/api/: contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/schemas/: contacts.py
src/services/: contacts.py
